samples/_failures_safe/1761184664_5bb992_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c0a839d5.c: In function ‘print_analysis’:
./samples/SAFE/__tmp_c0a839d5.c:137:12: error: missing terminating " character
  137 |     printf("Log Analysis Results
      |            ^~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_c0a839d5.c:137:5: error: expected expression at end of input
  137 |     printf("Log Analysis Results
      |     ^~~~~~
./samples/SAFE/__tmp_c0a839d5.c:137:5: error: expected declaration or statement at end of input
